[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://src/actors/Player.gd" type="Script" id=2]
[ext_resource path="res://src/objects/Gun.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/bullet.png" type="Texture" id=4]
[ext_resource path="res://assets/death.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/beam.wav" type="AudioStream" id=6]

[sub_resource type="GDScript" id=1]
script/source = "extends Area2D

const MOVE_SPEED = 3000

var velocity = Vector2()
var start = Vector2()
var destination = Vector2()

func start(_position, _direction, _destination):
	position = _position
	rotation = _direction.angle()
	velocity = _direction * MOVE_SPEED
	start = _position
	destination = _destination

func _process(delta):
	position += velocity * delta
	
	if (position - start).length() > (destination - start).length():
		explode()

func explode():
	queue_free()
"

[sub_resource type="CircleShape2D" id=2]
radius = 2.0

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.98773 )
colors = PoolColorArray( 1, 1, 1, 0.501961, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 4 )

[sub_resource type="PackedScene" id=6]
_bundled = {
"conn_count": 0,
"conns": PoolIntArray(  ),
"editable_instances": [  ],
"names": PoolStringArray( "Bullet", "collision_layer", "collision_mask", "script", "Area2D", "CollisionShape2D", "shape", "Sprite", "texture", "Particles2D", "amount", "speed_scale", "local_coords", "process_material" ),
"node_count": 4,
"node_paths": [  ],
"nodes": PoolIntArray( -1, -1, 4, 0, -1, 3, 1, 0, 2, 1, 3, 2, 0, 0, 0, 5, 5, -1, 1, 6, 3, 0, 0, 0, 7, 7, -1, 1, 8, 4, 0, 0, 0, 9, 9, -1, 5, 10, 5, 11, 6, 12, 7, 13, 8, 8, 4, 0 ),
"variants": [ 8, 5, SubResource( 1 ), SubResource( 2 ), ExtResource( 4 ), 20, 10.0, false, SubResource( 5 ) ],
"version": 2
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10.2092, 15.5022 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 10.5708, 15.2939 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
Bullet = SubResource( 6 )
gun_cooldown = 1.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Gun" parent="." instance=ExtResource( 3 )]
position = Vector2( 5.88297, 7.02289 )
offset = Vector2( 8, 0 )

[node name="RayCast2D" type="RayCast2D" parent="Gun"]
enabled = true
cast_to = Vector2( 550, 0 )
collision_mask = 5

[node name="GunTimer" type="Timer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.1
drag_margin_top = 0.1
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.0344086, 0.536077 )
shape = SubResource( 7 )

[node name="EnemyDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483652

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
visible = false
position = Vector2( 0.461822, 0.683184 )
shape = SubResource( 8 )

[node name="BeamSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="timeout" from="GunTimer" to="." method="_on_GunTimer_timeout"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
